--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@babel/parser": "^7.0.0",
+    "boxen": "^8.0.1",
+    "chalk": "^5.4.1",
+    "cli-table3": "^0.6.5",
     "commander": "^14.0.0",
     "express": "^4.18.0",
     "fast-glob": "^3.3.3",
+    "ora": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "scheduler": "^0.26.0",
