--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "tsc",
     "generate": "node dist/cli/index.js",
     "storybookify": "node dist/cli/index.js",
-    "dev:storybook": "cd storybook-app && npm run storybook"
+    "dev:storybook": "cd storybook-app && npm run storybook",
+    "test": "vitest"
   },
   "dependencies": {
     "@babel/parser": "^7.0.0",
@@ -19,6 +20,7 @@
     "chalk": "^5.4.1",
     "cli-table3": "^0.6.5",
     "commander": "^14.0.0",
+    "execa": "^9.6.0",
     "express": "^4.18.0",
     "fast-glob": "^3.3.3",
     "ora": "^8.2.0",
@@ -32,9 +34,11 @@
     "@types/node": "^24.0.10",
     "@types/react": "^18.2.62",
     "@types/react-dom": "^18.2.17",
+    "@vitest/ui": "^3.2.4",
     "ts-morph": "^22.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
   },
   "bin": {
     "storybookify": "cli/index.js"
