--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "storybookify",
   "version": "0.1.0",
-  "main": "dist/cli/index.js",
+  "main": "cli/index.js",
   "type": "module",
   "engines": {
     "node": ">=18"
@@ -23,8 +23,8 @@
   "scripts": {
     "start": "npm run storybookify && npm run storybook",
     "build": "tsc",
-    "generate": "node dist/cli/index.js",
-    "storybookify": "node dist/cli/index.js",
+    "generate": "node cli/index.js",
+    "storybookify": "node cli/index.js",
     "dev:storybook": "cd storybook-app && npm run storybook",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
@@ -46,7 +46,10 @@
     "fast-glob": "^3.3.3",
     "ora": "^8.2.0",
     "tsconfig-paths": "^4.2.0",
-    "ts-morph": "^22.0.0"
+    "ts-morph": "^22.0.0",
+    "@storybook/addon-a11y": "^9.0.15",
+    "@storybook/addon-docs": "^9.0.15",
+    "storybook": "^9.0.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -67,17 +70,12 @@
     "vitest": "^3.2.4"
   },
   "bin": {
-    "storybookify": "dist/cli/index.js"
+    "storybookify": "cli/index.js"
   },
   "files": [
     "dist/",
+    "cli/",
     "storybook-app/"
   ],
-  "exports": {
-    ".": {
-      "import": "./dist/cli/index.js",
-      "require": "./dist/cli/index.js"
-    }
-  },
-  "types": "dist/cli/index.d.ts"
+  "preferGlobal": true
 }
