--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "build": "tsc",
     "generate": "node cli/index.js",
     "storybookify": "node cli/index.js",
-    "dev:storybook": "cd storybook-app && npm run storybook",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
     "lint": "eslint core cli utils --ext .js,.ts,.tsx",
@@ -46,10 +45,7 @@
     "fast-glob": "^3.3.3",
     "ora": "^8.2.0",
     "tsconfig-paths": "^4.2.0",
-    "ts-morph": "^22.0.0",
-    "@storybook/addon-a11y": "^9.0.15",
-    "@storybook/addon-docs": "^9.0.15",
-    "storybook": "^9.0.15"
+    "ts-morph": "^22.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -74,8 +70,7 @@
   },
   "files": [
     "dist/",
-    "cli/",
-    "storybook-app/"
+    "cli/"
   ],
   "preferGlobal": true
 }
