--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "execa": "^9.6.0",
     "express": "^4.18.0",
     "fast-glob": "^3.3.3",
+    "fs-extra": "^11.3.0",
     "ora": "^8.2.0",
-    "tsconfig-paths": "^4.2.0",
-    "ts-morph": "^22.0.0"
+    "tmp-promise": "^3.0.3",
+    "ts-morph": "^22.0.0",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
