--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/priyankapakhale/storybookify"
   },
-  "author": "Priyanka Pakhale priyanka.pakhale54@gmail.com",
+  "author": "Priyanka Pakhale <priyanka.pakhale54@gmail.com>",
   "keywords": [
     "storybook",
     "react",
@@ -32,9 +32,15 @@
   },
   "peerDependencies": {
     "react": ">=18.0.0",
-    "react-dom": ">=18.0.0"
+    "react-dom": ">=18.0.0",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
+    "@storybook/core-server": "^8.6.14",
+    "@storybook/builder-vite": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14"
   },
   "dependencies": {
+    "semver": "^7.3.0",
     "@babel/parser": "^7.0.0",
     "boxen": "^8.0.1",
     "chalk": "^5.4.1",
@@ -50,6 +56,7 @@
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
+    "@types/semver": "^7.3.8",
     "@eslint/js": "^9.30.1",
     "@types/commander": "^2.12.0",
     "@types/node": "^24.0.10",
@@ -73,6 +80,5 @@
   "files": [
     "dist/",
     "cli/"
-  ],
-  "preferGlobal": true
+  ]
 }
